# zr-obp

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_JN.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: lints.yml  tests.yml
benchmark/: README.md
benchmark/cf_policy_search/: README.md  run_cf_policy_search.py
benchmark/ope/: README.md  benchmark_off_policy_estimators.py  benchmark_ope_estimators.py  benchmark_ope_estimators_hypara.py  pyproject.toml  run_cf_policy_search.py  train_regression_model.py
benchmark/ope/conf/: config.yaml  hyperparam.yaml  hyperparams.yaml
benchmark/ope/conf/estimator_hyperparams/: default.yaml
benchmark/ope/conf/reg_model_hyperparams/: default.yaml
benchmark/ope/conf/setting/: default.yaml
docs/: Makefile  about.rst  citation.rst  conf.py  estimators.rst  evaluation_ope.rst  index.rst  installation.rst  obp.rst  ope.rst  poc.rst  quickstart.rst  references.rst  refs.bib  related.rst  requirements.txt
examples/: README.md
examples/examples_with_obd/: README.md  custom_dataset.py  evaluate_counterfactual_policy.py  evaluate_off_policy_estimators.py
examples/examples_with_synthetic/: README.md  evaluate_off_policy_estimators.py
examples/multiclass/: README.md  evaluate_off_policy_estimators.py
examples/obd/: README.md  cf_policy_selection.py  custom_dataset.py  dataset.py  eval_regression_model.py  evaluate_counterfactual_policy.py  evaluate_off_policy_estimators.py  logistic_bandit.py  misc.ipynb  note.md  off_policy_estimator_selection.py
examples/online/: README.md  evaluate_off_policy_estimators.py
examples/opl/: README.md  evaluate_off_policy_learners.py
examples/quickstart/: README.md  balanced-ope-deterministic-evaluation-policy.ipynb  balanced-ope-stochastic-evaluation-policy.ipynb  drift-simulation.ipynb  multiclass.ipynb  obd.ipynb  online-bandit-vs-opl-simulation.ipynb  online-bandit-with-delay-simulation.ipynb  online.ipynb  opl.ipynb  quickstart.ipynb  quickstart_synthetic.ipynb  replay.ipynb  synthetic.ipynb  synthetic_slate.ipynb
examples/replay/: README.md  evaluate_off_policy_estimators.py
examples/synthetic/: README.md  evaluate_off_policy_estimators.py  obtain_slate_bandit_feedback.py
examples/yahoo/: quickstart.ipynb  yahoo.ipynb
obd/: README.md  README_JN.md
obp/: __init__.py  dataset.py  simulator.py  types.py  utils.py
obp/dataset/: __init__.py  base.py  func.py  multiclass.py  real.py  reward_type.py  synthetic.py  synthetic_continuous.py  synthetic_embed.py  synthetic_multi.py  synthetic_slate.py
tests/: test_utils.py
(+96 files in other folders)
