[tool.poetry]
name = "obp"
version = "0.5.2"
description = "Open Bandit Pipeline: a python library for off-policy evaluation and learning"
authors = ["Yuta Saito <ys552@cornell.edu>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
torch = "^1.9.0"
scikit-learn = "1.0.2"
pandas = "^1.3.2"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
tqdm = "^4.62.2"
scipy = "1.7.3"
PyYAML = "^5.4.1"
seaborn = "^0.11.2"
pyieoe = "^0.1.1"
pingouin = "^0.4.0"
mypy-extensions = "^0.4.3"
Pillow = "9.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "22.1.0"
pytest = "^6.2.5"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'
src_paths = ['obp', 'tests', 'examples', 'benchmark']
line_length = 88
lines_after_imports = 2
force_single_line = 'True'
force_sort_within_sections = 'True'
order_by_type = 'False'

[tool.pytest.ini_options]
addopts = "--color=yes"
