[tool.poetry]
name = "benchmark/ope"
version = "0.1.0"
description = "benchmarking OPE estimators on Open Bandit Dataset"
authors = ["usaito <ys552@cornell.edu>"]

[tool.poetry.dependencies]
python = "^3.9,<3.10"
scikit-learn = "^0.24.2"
pandas = "^1.3.1"
numpy = "^1.21.1"
matplotlib = "^3.4.2"
pingouin = "^0.4.0"
pyieoe = "^0.1.0"
obp = "^0.5.0"
hydra-core = "1.0.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
